[gd_scene load_steps=2 format=2]

[ext_resource path="res://ScreenShake.gd" type="Script" id=1]

[node name="ScreenShake" type="Node2D"]
script = ExtResource( 1 )

[node name="tween" type="Tween" parent="."]

[node name="duration_timer" type="Timer" parent="."]

[node name="frequency_timer" type="Timer" parent="."]

[connection signal="timeout" from="duration_timer" to="." method="_on_duration_timer_timeout"]
[connection signal="timeout" from="frequency_timer" to="." method="_on_frequency_timer_timeout"]
